--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8"/>
-<title>MANA Advertisements</title>
+<meta charset="UTF-8">
+<title>Insert title here</title>
 <link rel="stylesheet" type ="text/css" href="css/styles.css"/>
 </head>
 <body>
 	<ul>
-	  <li><a href="#home">Home</a></li>
+	  <li><a class="active" href="#home">Home</a></li>
 	  <li><a href="#main">Main</a></li>
 	  <li><a href="#about">My Account</a></li>
 	</ul>
-	<br/>
-	Bienvenido a MANA Advertisements
 </body>
 </html>
